<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.presentation.input.DataInputFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="15dp"
            android:visibility="gone"
            android:background="@drawable/bg_error"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:text="@string/error"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:text="@string/form_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:text="@string/form_subtitle"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/FeedbackTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/FeedbackTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/them"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_them" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/FeedbackTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptions"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/hint_feedback" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone"
            android:textStyle="normal"
            android:text="@string/error_empty"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_send"
            android:textAllCaps="false" />
    </LinearLayout>

    </FrameLayout>

</ScrollView>